--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ authors = [
 description = "zk-SNARK library"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/iron-fish/bellman"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -19,7 +19,7 @@ ff = "0.12.0"
 group = "0.12.0"
 rand_core = "0.6"
 byteorder = "1"
-log = "0.4.8"
+log = { version = "0.4.8", optional = true }
 rand = { version = "0.8", default-features = false }
 rayon = "1.5.0"
 thiserror = "1.0.10"
